# report-export-service

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  docker-compose.yml  implementation_plan.md  pyproject.toml
app/: main.py
app/api/routes/: health.py  report.py
app/api/schemas/: __init__.py  report.py
app/core/: settings.py
app/domain/report/: __init__.py  constants.py  job_repository.py  normalizer.py  tokenizer.py
app/infrastructure/: celery_app.py  job_repository.py  report_stats_storage.py  report_xlsx_writer.py
app/workers/: __init__.py  report_process_job.py
tests/integration/: test_report_api.py
tests/unit/: test_job_repository.py  test_report_process_job.py  test_report_route.py  test_report_stats_storage.py  test_report_text_processing.py  test_report_xlsx_writer.py  test_step1_contract.py
